# NOSferatu16

./: CMakeLists.txt  Config.cpp  Config.h  README.md  main.cpp  types.h
core/: FrequencyCalculator.cpp  FrequencyCalculator.h  Instruction.cpp  Instruction.h  NosferatuEmulator.cpp  NosferatuEmulator.h  Operations.cpp  Operations.h
io/: BinaryReader.cpp  BinaryReader.h
io/converter/: ProgramConverter.cpp  ProgramConverter.h
io/reader/: BinaryReader.cpp  BinaryReader.h  MnemonicReader.cpp  MnemonicReader.h  ProgramReader.cpp  ProgramReader.h
